--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,3 +1,4 @@
+/* GitHub style alert section  */
 .markdown-alert {
   --markdown-alert-color: inherit;
 
@@ -35,6 +36,33 @@
   &.markdown-alert-caution {
     --markdown-alert-color: var(--color-error);
   }
+}
+
+/* Style the footnotes section. */
+.footnotes {
+  @apply text-[smaller];
+  @apply mt-10;
+}
+
+/* Hide the section label for visual users. */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  word-wrap: normal;
+  border: 0;
+}
+
+/* Place `[` and `]` around footnote calls. */
+[data-footnote-ref]::before {
+  content: "[";
+}
+
+[data-footnote-ref]::after {
+  content: "]";
 }
 
 h1,
